--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint"
+    "lint": "eslint --fix"
   },
   "devDependencies": {
     "@eslint/css": "^0.8.1",
@@ -15,6 +15,7 @@
     "@eslint/json": "^0.12.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.2.0",
     "prettier": "3.5.3",
     "vite": "^6.3.5"
